Fix publish and build actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
       uses: astral-sh/setup-uv@v1
       with:
         version: "latest"
-    
+
+    - name: Publish to PyPI
+      run: uv build
+
     - name: Publish to PyPI
       run: uv publish 
