--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   deploy:
+    permissions:
+      id-token: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -15,7 +18,7 @@ jobs:
       with:
         version: "latest"
 
-    - name: Publish to PyPI
+    - name: Build package
       run: uv build
 
     - name: Publish to PyPI
